# rpi_bare

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: bare_main.cpp  display_driver.cpp  main.cpp  rpi.cpp  rpi.h  rpi_cfg.h
src/display/: display_driver.cpp  display_driver.h  display_font.cpp  display_font.h  display_formatter.h  display_render.cpp  display_render.h  display_tools.h
src/display/fonts/: display_font_sys_4x5.h  display_font_sys_5x7.h
src/display/icons/: display_icons_misc.cpp  display_icons_misc.h
src/drivers/i2c/: ads1115.h
src/rpi_bare/: rpi_bare.h  rpi_bare_tools.h  rpi_cfg_bare.h  rpi_gpio_bare.h  rpi_i2c_bare.h  rpi_i2c_fmt.h  rpi_spi_bare.h  rpi_timers_bare.h
src/tools/: bare_defs.cpp  formatter.h
